--- a/Cinema/en.lproj/Localizable.strings
+++ b/Cinema/en.lproj/Localizable.strings
@@ -6,3 +6,4 @@
   Copyright © 2018年 iiwa-design. All rights reserved.
 */
 "lbl_common_popularity" = "Popularity";
+"lbl_common_loading" = "Loading...";
